# Collaboration-Tool

./: README.md
Frontend/collab/: .env  api.js  package-lock.json  package.json
Frontend/collab/src/: App.jsx
Frontend/collab/src/components/: Form.jsx  Navbar.jsx  ProtectedRoute.jsx
Frontend/collab/src/page/: Group.jsx  Login.jsx  Register.jsx
Frontend/collab/src/service/: pythonapi.js  rustapi.js
Frontend/collab/src/style/: Navbar.css
Rust_Backend/back/: .env  Cargo.toml  users.db
Rust_Backend/back/src/: main.rs
