[package]
name = "back"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"  # Replace with your binary name
path = "src/main.rs"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
jsonwebtoken = "8.0"
rusqlite = "0.26"
futures = "0.3"
thiserror = "1.0"
argon2 = "0.2"
chrono = "0.4"